@@ -7,6 +7,7 @@ import com.mcbans.firestar.mcbans.util.Util;
 
 public class MessageCallback extends BaseCallback{
     private String message;
+    private String bmessage;
 
     public MessageCallback(final MCBans plugin, final CommandSender sender){
         super(plugin, sender);
@@ -15,11 +16,17 @@ public class MessageCallback extends BaseCallback{
     public void setMessage(final String message){
         this.message = message;
     }
+    public void setBroadcastMessage(final String message){
+        this.bmessage = message;
+    }
 
     @Override
     public void success() {
         if (message != null && sender != null){
             Util.message(sender, message);
+        }
+        if (bmessage != null && bmessage.length() > 0){
+            Util.broadcastMessage(bmessage);
         }
     }
 
