@@ -12,6 +12,7 @@
 - Added ban lookup command/API
 - Added support colored messages (color/format code: &<char>)
 - Added mcbans.hideview permission (hide view alts/previous bans on connect)
+- Added altlookup command for premium servers
 - Rewrited permission structure and permission node
 - Rewrited command structure
 - Rewrited localize structure
